[gd_scene load_steps=6 format=3 uid="uid://crr3use8lpvbb"]

[ext_resource type="Script" path="res://Scene/mini game/MathQuiz.gd" id="1_mw8e4"]
[ext_resource type="Texture2D" uid="uid://dx6ikvyr73k36" path="res://Assets/Background/bbloard.png" id="2_2vcsk"]
[ext_resource type="FontFile" uid="uid://bxppybk3mrem8" path="res://Fonts/Pixels.ttf" id="2_m01ll"]
[ext_resource type="FontFile" uid="uid://nsdsdvtwvjbv" path="res://Assets/Game_Elements/SummerPixel22Regular-jE0W7.ttf" id="4_35r1w"]
[ext_resource type="Texture2D" uid="uid://jqp8i7gf6s3b" path="res://Assets/Game_Elements/ui_button.png" id="5_t53ao"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mw8e4")

[node name="Bbloard" type="Sprite2D" parent="."]
position = Vector2(590, 323.5)
scale = Vector2(0.923437, 0.898611)
texture = ExtResource("2_2vcsk")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.184
anchor_bottom = 0.035
offset_left = 397.0
offset_top = 165.0
offset_right = 381.032
offset_bottom = 235.32
theme_override_font_sizes/font_size = 60
text = "?"

[node name="Answer1" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 311.0
offset_right = 404.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 30

[node name="Answer2" type="Button" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 311.0
offset_right = 671.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 30

[node name="Answer3" type="Button" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 311.0
offset_right = 935.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 30

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 438.0
offset_right = 357.0
offset_bottom = 493.0
theme_override_fonts/font = ExtResource("2_m01ll")
theme_override_font_sizes/font_size = 74
text = "Score: 0"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 438.0
offset_top = 496.0
offset_right = 653.0
offset_bottom = 591.0
texture = ExtResource("5_t53ao")

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 466.0
offset_top = 527.0
offset_right = 632.0
offset_bottom = 585.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_35r1w")
theme_override_font_sizes/font_size = 49
text = "RESTART"
flat = true

[node name="WinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 215.0
offset_right = 386.0
offset_bottom = 362.0
theme_override_fonts/font = ExtResource("2_m01ll")
theme_override_font_sizes/font_size = 200

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 741.0
offset_top = 59.0
offset_right = 1078.0
offset_bottom = 141.0
theme_override_fonts/font = ExtResource("4_35r1w")
theme_override_font_sizes/font_size = 81
text = "MATH QUIZ"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 230.0
offset_right = 376.0
offset_bottom = 377.0
theme_override_fonts/font = ExtResource("2_m01ll")
theme_override_font_sizes/font_size = 200

[node name="back" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 23.0
offset_top = 22.0
offset_right = 118.0
offset_bottom = 83.0
texture = ExtResource("5_t53ao")

[node name="mathquiz" type="Button" parent="back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -22.5
offset_right = 19.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.721569, 1, 0.6, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_35r1w")
theme_override_font_sizes/font_size = 51
text = "<"
flat = true

[connection signal="pressed" from="back/mathquiz" to="." method="_on_mathquiz_pressed"]
